update button styles,leak page, add products pages

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,5 @@
 ---
+import Cta from "./Cta.astro"
 ---
 <section class="relative bg-base-200 py-24 px-6 text-center text-base-content">
 	<div class="max-w-3xl mx-auto">
@@ -19,11 +20,11 @@
 		</p>
 
 <div class="flex flex-col justify-center w-full gap-4">
-		<a href="tel:6165551234" class="btn btn-primary text-lg w-72 mx-auto">
+		<a href="tel:6165551234" class="btn btn-primary text-lg h-fit min-w-68 py-2 mx-auto">
 			<svg  xmlns="http://www.w3.org/2000/svg"  width={24}  height={24}  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width={2}  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-phone"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" /></svg>
-			Call Now for Fast Service
+			Call Now for Fastest Service
 		</a>
-		<a href="/pricing/" class="btn btn-outline text-lg mx-auto w-72">
+		<a href="/pricing/" class="btn btn-outline text-lg mx-auto">
 			<svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-receipt-2"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 21v-16a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2v16l-3 -2l-2 2l-2 -2l-2 2l-2 -2l-3 2" /><path d="M14 8h-2.5a1.5 1.5 0 0 0 0 3h1a1.5 1.5 0 0 1 0 3h-2.5m2 0v1.5m0 -9v1.5" /></svg>
 			See Pricing
 		</a>
