--- a/src/components/TheFix.astro
+++ b/src/components/TheFix.astro
@@ -1,7 +1,7 @@
 ---
 // TheFix.astro
 ---
-<section id="what-makes-us-different" class="relative py-16 px-6 text-base-content">
+<section id="how-we-do-it-differently" class="relative py-16 px-6 text-base-content">
 	<div class="absolute inset-0 z-0">
 		<div class="w-full h-full bg-gradient-to-b from-base-200 to-base-300"></div>
 	</div>
