--- a/src/components/Cta.astro
+++ b/src/components/Cta.astro
@@ -5,14 +5,30 @@ const { title = "Need Hot Water Fast?" } = Astro.props;
 	<div class="max-w-3xl mx-auto">
 		<h2 class="text-4xl font-bold mb-4">{title}</h2>
 		<p class="text-lg mb-8">
-			Call now for fastest service, or book a virtual estimate to get started. We’ll walk you through options and schedule your install — no pressure, no surprises - all our pricing is out in the open.
+			We’ll walk through your options, provide clear pricing, and schedule your install - no pressure, no surprises.
 		</p>
-		<div class="flex flex-col sm:flex-row justify-center gap-4">
-			<a href="tel:6165551234" class="btn btn-secondary text-base-content text-lg w-72"><svg  xmlns="http://www.w3.org/2000/svg"  width={24}  height={24}  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width={2}  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-phone"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" /></svg>
-				Call Now for Fast Service
+		<div class="flex flex-col justify-center gap-4">
+			<a href="tel:6165551234" class="btn btn-secondary text-base-content text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
+				<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
+					class="icon icon-tabler icons-tabler-outline icon-tabler-phone">
+					<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+					<path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+				</svg>
+				<p class="w-full">Call Now for Fastest Service</p>
 			</a>
-			<a href="#schedule-estimate" class="btn btn-outline text-lg w-72"><svg  xmlns="http://www.w3.org/2000/svg"  width={24}  height={24}  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width={2}  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10.5 21h-4.5a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v3" /><path d="M16 3v4" /><path d="M8 3v4" /><path d="M4 11h10" /><path d="M18 18m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" /><path d="M18 16.5v1.5l.5 .5" /></svg>
-				Schedule Virtual Estimate
+
+			<a href="#schedule-estimate" class="btn btn-outline text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
+				<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
+					class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
+					<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+					<path d="M10.5 21h-4.5a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v3" />
+					<path d="M16 3v4" />
+					<path d="M8 3v4" />
+					<path d="M4 11h10" />
+					<path d="M18 18m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
+					<path d="M18 16.5v1.5l.5 .5" />
+				</svg>
+				<p class="w-full">Schedule Virtual Appointment</p>
 			</a>
 		</div>
 	</div>
