--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Navigation from '../components/Navigation.astro';
 import Footer from '../components/Footer.astro';
+import HelpButton from '../components/HelpButton.astro';
 import '../styles/global.css';
 
 const description = 'Professional water heater replacement services in Grand Rapids, MI. We handle everything from standard tank replacements to complex tankless installations.';
@@ -78,6 +79,7 @@ const metadata = {
 
 	<body>
 		<Navigation />
+		<HelpButton />
 		<slot />
 		<Footer />
 	</body>
