--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -24,7 +24,7 @@ import Cta from '../components/Cta.astro';
 
 		<div class="grid gap-10 sm:grid-cols-2">
 			<div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-8 text-left">
-				<h2 class="text-2xl font-semibold mb-2">40-Gallon Standard Gas or Electric Tank Water Heater</h2>
+				<h2 class="text-2xl font-semibold mb-2">40-Gallon Standard Tank Water Heater (Gas or Electric)</h2>
 				<p class="text-4xl font-bold text-primary mb-4">$1,475 Installed</p>
 				<ul class="list-disc list-inside text-left text-sm leading-relaxed space-y-0 mb-6">
 					<li>Standard replacement in same location</li>
@@ -33,7 +33,7 @@ import Cta from '../components/Cta.astro';
 					<li>All work to code, with permit</li>
 				</ul>
 
-				<a href="#schedule-estimate" class="btn btn-primary text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
+				<a href="#schedule-estimate/" class="btn btn-primary text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 						class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
 						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -49,7 +49,7 @@ import Cta from '../components/Cta.astro';
 			</div>
 
 			<div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-8 text-left">
-				<h2 class="text-2xl font-semibold mb-2">50-Gallon Standard Gas or Electric Tank Water Heater</h2>
+				<h2 class="text-2xl font-semibold mb-2">50-Gallon Standard Tank Water Heater (Gas or Electric)</h2>
 				<p class="text-4xl font-bold text-primary mb-4">$1,675 Installed</p>
 				<ul class="list-disc list-inside text-left text-sm leading-relaxed space-y-1 mb-6">
 					<li>Standard replacement in same location</li>
@@ -57,7 +57,7 @@ import Cta from '../components/Cta.astro';
 					<li>All required utility connections (water, gas, venting, electric)*</li>
 					<li>All work to code, with permit</li>
 				</ul>
-				<a href="#schedule-estimate" class="btn btn-primary text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
+				<a href="#schedule-estimate/" class="btn btn-primary text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 						class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
 						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -84,7 +84,7 @@ import Cta from '../components/Cta.astro';
                     <li>Tankless systems may require additional venting, gas, or electrical upgrades</li>
                     <li>Home visit required if upgrading from a tank to tankless water heater (due to additional equipment requirements)</li>
                 </ul>
-				<a href="#schedule-estimate" class="btn btn-primary text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
+				<a href="#schedule-estimate/" class="btn btn-primary text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 						class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
 						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -111,7 +111,7 @@ import Cta from '../components/Cta.astro';
 					<li>Heat pump systems may require additional venting, gas, or electrical upgrades</li>
 					<li>Home visit required if upgrading from a tank to heat pump water heater (due to additional equipment requirements)</li>
 				</ul>
-				<a href="#schedule-estimate" class="btn btn-primary text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
+				<a href="#schedule-estimate/" class="btn btn-primary text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 						class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
 						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
