--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import HelpButton from '../components/HelpButton.astro';
 ---
 
 <Layout>
+	<HelpButton />
 	<Hero />
 	<PainPoints />
 	<TheFix />
