--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,7 @@
 ---
 import Cta from "./Cta.astro"
 ---
-<section class="relative bg-base-200 py-24 px-6 text-center text-base-content">
+<section class="relative bg-base-200 pt-18 sm:py-24 px-6 text-center text-base-content">
 	<div class="max-w-3xl mx-auto">
 		<h1 class="text-4xl sm:text-5xl font-bold leading-tight mb-6">
 			Fast, Affordable Water Heater Replacement in Grand Rapids
