--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 import Cta from '../components/Cta.astro';
 ---
 <Layout title="Water Heater Replacement Pricing | Grand Rapids, MI">
-	<section class="px-6 pt-16 sm:pt-20 text-base-content text-center max-w-4xl mx-auto">
+	<section class="px-6 pt-8 sm:pt-20 text-base-content text-center max-w-4xl mx-auto">
 		<h1 class="text-4xl sm:text-5xl font-bold mb-6 tracking-tight">Water Heater Replacement Pricing</h1>
 		<p class="text-xl max-w-2xl mx-auto mb-2">Transparent prices with no surprises. Prices include:</p>
         <ul class="mb-12 px-6 max-w-2xl mx-auto list-disc list-inside space-y-0 text-left">
@@ -33,7 +33,7 @@ import Cta from '../components/Cta.astro';
 					<li>All work to code, with permit</li>
 				</ul>
 
-				<a href="#schedule-estimate/" class="btn btn-primary text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
+				<a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center justify-between mx-auto text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 						class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
 						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -57,7 +57,7 @@ import Cta from '../components/Cta.astro';
 					<li>All required utility connections (water, gas, venting, electric)*</li>
 					<li>All work to code, with permit</li>
 				</ul>
-				<a href="#schedule-estimate/" class="btn btn-primary text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
+				<a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center justify-between mx-auto text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 						class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
 						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -84,7 +84,7 @@ import Cta from '../components/Cta.astro';
                     <li>Tankless systems may require additional venting, gas, or electrical upgrades</li>
                     <li>Home visit required if upgrading from a tank to tankless water heater (due to additional equipment requirements)</li>
                 </ul>
-				<a href="#schedule-estimate/" class="btn btn-primary text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
+				<a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center justify-between mx-auto text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 						class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
 						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -111,7 +111,7 @@ import Cta from '../components/Cta.astro';
 					<li>Heat pump systems may require additional venting, gas, or electrical upgrades</li>
 					<li>Home visit required if upgrading from a tank to heat pump water heater (due to additional equipment requirements)</li>
 				</ul>
-				<a href="#schedule-estimate/" class="btn btn-primary text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
+				<a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center justify-between mx-auto text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 						class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
 						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -128,6 +128,6 @@ import Cta from '../components/Cta.astro';
 
 		<p class="text-sm text-gray-500 mt-6">*Venting, electrical and gas line upgrades are where we run into the largest price changes but most requirements can usually be clarified via video call or home visit.</p>
 		<p class="text-sm text-gray-500 my-6">Final price is always provided by email or text before work begins.</p>
-		<Cta />
 	</section>
+	<Cta />
 </Layout>
