update pricing <ul>

--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -6,34 +6,40 @@ import Cta from '../components/Cta.astro';
 <Layout title="Water Heater Replacement Pricing | Grand Rapids, MI">
 	<section class="px-6 pt-8 sm:pt-20 text-base-content text-center max-w-4xl mx-auto">
 		<h1 class="text-4xl sm:text-5xl font-bold mb-6 tracking-tight">Water Heater Replacement Pricing</h1>
-		<p class="text-xl max-w-2xl mx-auto mb-2">Transparent prices with no surprises. Prices include:</p>
-        <ul class="mb-12 px-6 max-w-2xl mx-auto list-disc list-inside space-y-0 text-left">
-            <li>No hidden fees</li>
-            <li>Complete installation</li>
-            <li>All parts and labor</li>
-            <li>Permit and inspection</li>
-            <li>All utility connections</li>
-            <li>All venting materials</li>
-            <li>Thorough testing</li>
-            <li>1 Yr Parts & Labor Warranty</li>
-            <li>Full Equipment Warranties (vary by make and model—avg 5-10 years)</li>
-            <li>Disposal of old water heater</li>
-            <li>Thorough cleanup</li>
-            <li>100% satisfaction</li>
-        </ul>
+		<p class="text-xl max-w-2xl mx-auto mb-4">Transparent prices with no surprises. Prices include:</p>
+		<div class="mb-12 px-6 max-w-4xl mx-auto">
+			<div class="grid md:grid-cols-2 gap-x-12 gap-y-2  text-left">
+				<ul class="space-y-2 list-disc pl-6">
+					<li>No hidden fees</li>
+					<li>Complete installation</li>
+					<li>All parts and labor</li>
+					<li>All utility connections</li>
+					<li>All venting materials</li>
+					<li>Permit and inspection</li>
+				</ul>
+				<ul class="space-y-2 list-disc pl-6">
+					<li>Startup, setup & testing</li>
+					<li>1 Yr Parts & Labor Warranty</li>
+					<li>Full Equipment Warranties (vary by make and model—avg 5–12 years)</li>
+					<li>Disposal of old water heater</li>
+					<li>Thorough cleanup</li>
+				</ul>
+			</div>
+		</div>
 
 		<div class="grid gap-10 sm:grid-cols-2">
-			<div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-8 text-left">
-				<h2 class="text-2xl font-semibold mb-2">40-Gallon Standard Tank Water Heater (Gas or Electric)</h2>
-				<p class="text-4xl font-bold text-primary mb-4">$1,475 Installed</p>
-				<ul class="list-disc list-inside text-left text-sm leading-relaxed space-y-0 mb-6">
-					<li>Standard replacement in same location</li>
-					<li>Removal & disposal of old tank</li>
-					<li>All required utility connections (water, gas, venting, electric)*</li>
-					<li>All work to code, with permit</li>
-				</ul>
-
-				<a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center justify-between mx-auto text-center">
+			<div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-4 sm:p-8 text-left flex flex-col">
+				<div class="flex-grow">
+					<h2 class="text-2xl font-semibold mb-2">40-Gallon Standard Tank Water Heater (Gas or Electric)</h2>
+					<p class="text-4xl font-bold text-primary mb-4">$1,475 Installed</p>
+					<ul class="list-disc list-inside text-left text-sm leading-relaxed space-y-0 mb-6">
+						<li>Standard replacement in same location</li>
+						<li>Removal & disposal of old tank</li>
+						<li>All required utility connections (water, gas, venting, electric)*</li>
+						<li>All work to code, with permit</li>
+					</ul>
+				</div>
+				<a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center mx-auto text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 						class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
 						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -48,16 +54,18 @@ import Cta from '../components/Cta.astro';
 				</a>
 			</div>
 
-			<div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-8 text-left">
-				<h2 class="text-2xl font-semibold mb-2">50-Gallon Standard Tank Water Heater (Gas or Electric)</h2>
-				<p class="text-4xl font-bold text-primary mb-4">$1,675 Installed</p>
-				<ul class="list-disc list-inside text-left text-sm leading-relaxed space-y-1 mb-6">
-					<li>Standard replacement in same location</li>
-					<li>Removal & disposal of old tank</li>
-					<li>All required utility connections (water, gas, venting, electric)*</li>
-					<li>All work to code, with permit</li>
-				</ul>
-				<a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center justify-between mx-auto text-center">
+			<div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-4 sm:p-8 text-left flex flex-col">
+				<div class="flex-grow">
+					<h2 class="text-2xl font-semibold mb-2">50-Gallon Standard Tank Water Heater (Gas or Electric)</h2>
+					<p class="text-4xl font-bold text-primary mb-4">$1,675 Installed</p>
+					<ul class="list-disc list-inside text-left text-sm leading-relaxed space-y-1 mb-6">
+						<li>Standard replacement in same location</li>
+						<li>Removal & disposal of old tank</li>
+						<li>All required utility connections (water, gas, venting, electric)*</li>
+						<li>All work to code, with permit</li>
+					</ul>
+				</div>
+				<a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center mx-auto text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 						class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
 						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -72,19 +80,21 @@ import Cta from '../components/Cta.astro';
 				</a>
 			</div>
 
-            <div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-8 text-left">
-                <h2 class="text-2xl font-semibold mb-2">Tankless Water Heater</h2>
-                <p class="text-4xl font-bold text-primary mb-4">Starting at $2,500</p>
-                <ul class="list-disc list-inside text-left text-sm leading-relaxed space-y-1 mb-6">
-					<li>Standard replacement in same location</li>
-					<li>Removal & disposal of old unit</li>
-                    <li>All required utility connections (water, gas, venting, electric)*</li>
-                    <li>All work to code, with permit</li>
-                    <li>Price varies based on existing setup and requirements</li>
-                    <li>Tankless systems may require additional venting, gas, or electrical upgrades</li>
-                    <li>Home visit required if upgrading from a tank to tankless water heater (due to additional equipment requirements)</li>
-                </ul>
-				<a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center justify-between mx-auto text-center">
+            <div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-4 sm:p-8 text-left flex flex-col">
+				<div class="flex-grow">
+					<h2 class="text-2xl font-semibold mb-2">Tankless Water Heater</h2>
+					<p class="text-4xl font-bold text-primary mb-4">Starting at $2,500</p>
+					<ul class="list-disc list-inside text-left text-sm leading-relaxed space-y-1 mb-6">
+						<li>Standard replacement in same location</li>
+						<li>Removal & disposal of old unit</li>
+						<li>All required utility connections (water, gas, venting, electric)*</li>
+						<li>All work to code, with permit</li>
+						<li>Price varies based on existing setup and requirements</li>
+						<li>Tankless systems may require additional venting, gas, or electrical upgrades</li>
+						<li>Home visit required if upgrading from a tank to tankless water heater (due to additional equipment requirements)</li>
+					</ul>
+				</div>
+				<a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center mx-auto text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 						class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
 						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -99,19 +109,21 @@ import Cta from '../components/Cta.astro';
 				</a>
 			</div>
 
-			<div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-8 text-left">
-				<h2 class="text-2xl font-semibold mb-2">Heat Pump Water Heater</h2>
-				<p class="text-4xl font-bold text-primary mb-4">Starting at $3,500</p>
-				<ul class="list-disc list-inside text-left text-sm leading-relaxed space-y-1 mb-6">
-					<li>Standard replacement in same location</li>
-					<li>Removal & disposal of old unit</li>
-					<li>All required utility connections (water, gas, venting, electric)*</li>
-					<li>All work to code, with permit</li>
-					<li>Price varies based on existing setup and requirements</li>
-					<li>Heat pump systems may require additional venting, gas, or electrical upgrades</li>
-					<li>Home visit required if upgrading from a tank to heat pump water heater (due to additional equipment requirements)</li>
-				</ul>
-				<a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center justify-between mx-auto text-center">
+			<div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-4 sm:p-8 text-left flex flex-col">
+				<div class="flex-grow">
+					<h2 class="text-2xl font-semibold mb-2">Heat Pump Water Heater</h2>
+					<p class="text-4xl font-bold text-primary mb-4">Starting at $3,500</p>
+					<ul class="list-disc list-inside text-left text-sm leading-relaxed space-y-1 mb-6">
+						<li>Standard replacement in same location</li>
+						<li>Removal & disposal of old unit</li>
+						<li>All required utility connections (water, gas, venting, electric)*</li>
+						<li>All work to code, with permit</li>
+						<li>Price varies based on existing setup and requirements</li>
+						<li>Heat pump systems may require additional venting, gas, or electrical upgrades</li>
+						<li>Home visit required if upgrading from a tank to heat pump water heater (due to additional equipment requirements)</li>
+					</ul>
+				</div>
+				<a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center mx-auto text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 						class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
 						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
