--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -2,6 +2,10 @@
 // src/pages/pricing.astro
 import Layout from '../layouts/Layout.astro';
 import Cta from '../components/Cta.astro';
+import natDraftGroup from '../assets/images/wh-natDraftGroup.png';
+import powerVentGroup from '../assets/images/wh-powerVentGroup.png';
+import tanklessGroup from '../assets/images/wh-tanklessGroup.png';
+import hybridGroup from '../assets/images/wh-hybridGroup.png';
 ---
 <Layout title="Water Heater Replacement Pricing | Grand Rapids, MI">
 	<section class="px-6 pt-8 sm:pt-20 text-base-content text-center max-w-4xl mx-auto">
@@ -27,8 +31,11 @@ import Cta from '../components/Cta.astro';
 			</div>
 		</div>
 
+		<!-- price cards -->
 		<div class="grid gap-10 sm:grid-cols-2">
+
 			<div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-4 sm:p-8 text-left flex flex-col">
+				<img src={natDraftGroup.src} alt="natural draft water heater" class="w-full h-48 object-contain rounded-lg mb-4">
 				<div class="flex-grow">
 					<h2 class="text-2xl font-semibold mb-2">40-Gallon Standard Tank Water Heater (Gas or Electric)</h2>
 					<p class="text-4xl font-bold text-primary mb-4">$1,475 Installed</p>
@@ -55,6 +62,7 @@ import Cta from '../components/Cta.astro';
 			</div>
 
 			<div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-4 sm:p-8 text-left flex flex-col">
+				<img src={natDraftGroup.src} alt="natural draft water heater" class="w-full h-48 object-contain rounded-lg mb-4">
 				<div class="flex-grow">
 					<h2 class="text-2xl font-semibold mb-2">50-Gallon Standard Tank Water Heater (Gas or Electric)</h2>
 					<p class="text-4xl font-bold text-primary mb-4">$1,675 Installed</p>
@@ -80,7 +88,62 @@ import Cta from '../components/Cta.astro';
 				</a>
 			</div>
 
+			<div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-4 sm:p-8 text-left flex flex-col">
+				<img src={powerVentGroup.src} alt="natural draft water heater" class="w-full h-48 object-contain rounded-lg mb-4">
+				<div class="flex-grow">
+					<h2 class="text-2xl font-semibold mb-2">40-Gallon Gas Power Vent Tank Water Heater</h2>
+					<p class="text-4xl font-bold text-primary mb-4">$1,995 Installed</p>
+					<ul class="list-disc list-inside text-left text-sm leading-relaxed space-y-0 mb-6">
+						<li>Standard replacement in same location</li>
+						<li>Removal & disposal of old tank</li>
+						<li>All required utility connections (water, gas, venting, electric)*</li>
+						<li>All work to code, with permit</li>
+					</ul>
+				</div>
+				<a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center mx-auto text-center">
+					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
+						class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
+						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+						<path d="M10.5 21h-4.5a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v3" />
+						<path d="M16 3v4" />
+						<path d="M8 3v4" />
+						<path d="M4 11h10" />
+						<path d="M18 18m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
+						<path d="M18 16.5v1.5l.5 .5" />
+					</svg>
+					<p class="w-full">Schedule Virtual Estimate</p>
+				</a>
+			</div>
+
+			<div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-4 sm:p-8 text-left flex flex-col">
+				<img src={powerVentGroup.src} alt="natural draft water heater" class="w-full h-48 object-contain rounded-lg mb-4">
+				<div class="flex-grow">
+					<h2 class="text-2xl font-semibold mb-2">50-Gallon Gas Power Vent Tank Water Heater</h2>
+					<p class="text-4xl font-bold text-primary mb-4">$2,095 Installed</p>
+					<ul class="list-disc list-inside text-left text-sm leading-relaxed space-y-1 mb-6">
+						<li>Standard replacement in same location</li>
+						<li>Removal & disposal of old tank</li>
+						<li>All required utility connections (water, gas, venting, electric)*</li>
+						<li>All work to code, with permit</li>
+					</ul>
+				</div>
+				<a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center mx-auto text-center">
+					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
+						class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
+						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+						<path d="M10.5 21h-4.5a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v3" />
+						<path d="M16 3v4" />
+						<path d="M8 3v4" />
+						<path d="M4 11h10" />
+						<path d="M18 18m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
+						<path d="M18 16.5v1.5l.5 .5" />
+					</svg>
+					<p class="w-full">Schedule Virtual Estimate</p>
+				</a>
+			</div>
+
             <div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-4 sm:p-8 text-left flex flex-col">
+				<img src={tanklessGroup.src} alt="natural draft water heater" class="w-full h-48 object-contain rounded-lg mb-4">
 				<div class="flex-grow">
 					<h2 class="text-2xl font-semibold mb-2">Tankless Water Heater</h2>
 					<p class="text-4xl font-bold text-primary mb-4">Starting at $2,500</p>
@@ -110,9 +173,10 @@ import Cta from '../components/Cta.astro';
 			</div>
 
 			<div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-4 sm:p-8 text-left flex flex-col">
+				<img src={hybridGroup.src} alt="natural draft water heater" class="w-full h-48 object-contain rounded-lg mb-4">
 				<div class="flex-grow">
 					<h2 class="text-2xl font-semibold mb-2">Heat Pump Water Heater</h2>
-					<p class="text-4xl font-bold text-primary mb-4">Starting at $3,500</p>
+					<p class="text-4xl font-bold text-primary mb-4">Starting at $2,600</p>
 					<ul class="list-disc list-inside text-left text-sm leading-relaxed space-y-1 mb-6">
 						<li>Standard replacement in same location</li>
 						<li>Removal & disposal of old unit</li>
