--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,10 +1,23 @@
 ---
 import ThemeSelector from './ThemeSelector.astro';
+import logo from '../assets/images/whrc-logo.png';
 ---
 
 <div class="fixed top-0 left-0 w-full z-50 navbar bg-base-100 shadow-sm">
     <div class="navbar-start">
-        <a aria-label="Home | Water Heater Replacement Company of Grand Rapids" href="/" class=" max-w-64 btn btn-ghost h-fit text-md">Water Heater Replacement Company of Grand Rapids</a>
+        <a aria-label="Home | Water Heater Replacement Company of Grand Rapids"
+            href="/"
+            class="btn btn-ghost max-w-70" >
+                <img src={logo.src}
+                    alt="Water Heater Replacement Company of Grand Rapids Logo"
+                    class="h-12 object-contain max-h-[90%]" />
+                    Water Heater Replacement Company of Grand Rapids
+        </a>
+        <!-- <a aria-label="Home | Water Heater Replacement Company of Grand Rapids"
+            href="/"
+            class=" max-w-56 btn btn-ghost h-fit text-md">
+                Water Heater Replacement Company of Grand Rapids
+        </a> -->
     </div>
     <div class="navbar-end">
         <!-- desktop menu -->
